--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ figcaption {
 /* ID selector can be applied to one unique ID per page */
 
 #logo {
-  background: aqua;
+
 }
 
 /* Descendent Selector */
@@ -84,4 +84,85 @@ figcaption {
   color: red;
 }
 
+  /* Media */
+
+  img, video, audio {
+    max-width: 100%;
+
+  }
+
+  /* Style some layout */
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+
+  .wrapper {
+    width: 960px;
+    margin: 0 auto;
+  }
+
+.col-1 {
+  float: left;
+  width: 32%;
+}
+
+.col-2 {
+  float: left;
+  width: 66%;
+}
+
+.col-3 {
+  background: #ccc;
+}
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  height: 0;
+  line-height: 0;
+}
+
+[class*="col-"] {
+  margin-left: 2%;
+}
+
+.first {
+  margin-left: 0%;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  z-index: 1;
+}
+
+
+section {
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+#social {
+  position: fixed;
+  top: 200px;
+  right: 20px;
+  width: 40px;
+  z-index: 1;
+}
+
+#social a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  background: yellow;
+}
 
