--- a/css/style.css
+++ b/css/style.css
@@ -1,97 +1,79 @@
-@import url(https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
-@import url(https://fonts.googleapis.com/css?family=Clicker+Script);
+import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
+@import url(http://fonts.googleapis.com/css?family=Clicker+Script);
 
+/*////////// GLOBAL //////////*/
 
-/* This is a comment in CSS */
+h3 {
+  margin: 0 0 10px;
+}
 
-/* CSS Syntax:
-
-  selector {
-    property: value;
-    property: value;
-
-  }
-*/
-
-/* Type Selector */
-
-p {
-
-  font-size: 16px; /* Default in most browsers
-  Pixels are always the same in different browsers, points are not always
-  the same. Percents is a relative amount. Em is a realtive amount, it's a measurement
-  of the width of the letter m, and can be different from font to font. Most browsers have
-  1 em set to 16px.
-
-  16px = 1em (divide by 16) */
-
+p { 
+  font-size: 1em; /* 16px, ?pt, 100%, 1em */
   line-height: 1.5em;
+}
+
+figure {
+  margin: 0 0 10px;
 }
 
 figcaption {
-  /* Line 35 accomplishes the same thing as 30-33 
-
-  font-weight: normal;
-  font-size: 0.75em;
-  line-height: 1.5em;
-  font-family: Georgia, "New Times Roman", serif; --> Use quotes if space in font name 
-
-  */
-
-  font: normal 0.75em/1.5em Georgia, "New Times Roman", serif;
+  font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive;
   color: #777;
   text-align: right;
-
 }
 
-/* Class Selectors: Can be applied to as many elements as you'd like */
-
-.milk-text { /* Will select elements with a class attribute set to milk-text */
-  font: bold 2.6em "Elsie Swash Caps", cursive;
+.milk-text {
+  font: bold 2.6em 'Elsie Swash Caps', cursive;
   color: white;
-  text-shadow: 0.2px 3px #000;
+  text-shadow: 0 2px 3px #000;
 }
 
-/* ID selector can be applied to one unique ID per page */
-
-#logo {
-
+.shadow {
+  box-shadow: 0 3px 10px #333;
 }
 
-/* Descendent Selector */
-
-#logo h1 { /* Selects only H1s if they're inside the ID of Logo */
-  font-family: 'Clicker Script', cursive;
+.border-right {
+  border-right: 1px dotted #ccc;
+  padding-right: 30px;
 }
 
-#logo h2 { /* Selects only H1s if they're inside the ID of Logo */
-  font-family: 'Elsie Swash Caps', cursive;
+
+/*////////// BACKGROUNDS //////////*/
+
+.white-wood {
+  background: url(../images/white-wood.jpg) no-repeat center top;
+  background-size: cover;
 }
 
-/* Pseudo Class Selectors (Events states) */
-
-#details a:link, #details a:visited {
-  color: black;
-  text-decoration: none;
-} 
-
-#details a:hover {
-  color: black;
-  text-decoration: underline;
-} 
-
-#details a:active {
-  color: red;
+.light-fade {
+  background: #efefef; /* Old browsers */
+  background: -moz-linear-gradient(top,  #efefef 0%, #ffffff 24%, #ffffff 68%, #dddddd 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#efefef), color-stop(24%,#ffffff), color-stop(68%,#ffffff), color-stop(100%,#dddddd)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #efefef 0%,#ffffff 24%,#ffffff 68%,#dddddd 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #efefef 0%,#ffffff 24%,#ffffff 68%,#dddddd 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #efefef 0%,#ffffff 24%,#ffffff 68%,#dddddd 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #efefef 0%,#ffffff 24%,#ffffff 68%,#dddddd 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#efefef', endColorstr='#dddddd',GradientType=0 ); /* IE6-9 */
 }
 
-  /* Media */
+.medium-fade {
+  background: rgb(229,229,229); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(229,229,229,1) 0%, rgba(255,255,255,1) 99%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(229,229,229,1)), color-stop(99%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(229,229,229,1) 0%,rgba(255,255,255,1) 99%); /* W3C */
+}
 
-  img, video, audio {
-    max-width: 100%;
+/*/////// MEDIA ////////*/
 
-  }
+img, video, audio, iframe, table, form {
+  width: 100%; /* IE */
+  max-width: 100%; /* FF, Safari, Chrome */
+}
 
-  /* Style some layout */
+/*////////// FIXES //////////*/
 
 * {
   -webkit-box-sizing: border-box;
@@ -99,11 +81,25 @@ figcaption {
   box-sizing: border-box;
 }
 
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  height: 0;
+  line-height: 0;
+}
 
-  .wrapper {
-    width: 960px;
-    margin: 0 auto;
-  }
+.clear {
+  clear:both;
+}
+
+/*/////// LAYOUT ////////*/
+
+.wrapper {
+  width: 960px;
+  margin: 0 auto;
+}
 
 .col-1 {
   float: left;
@@ -116,16 +112,7 @@ figcaption {
 }
 
 .col-3 {
-  background: #ccc;
-}
-
-.clearfix:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  height: 0;
-  line-height: 0;
+  
 }
 
 [class*="col-"] {
@@ -136,24 +123,11 @@ figcaption {
   margin-left: 0%;
 }
 
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: #fff;
-  z-index: 1;
-}
-
-
-section {
-  padding: 20px;
-  margin-bottom: 20px;
-}
+/*/////// SOCIAL ////////*/
 
 #social {
   position: fixed;
-  top: 200px;
+  top: 185px;
   right: 20px;
   width: 40px;
   z-index: 1;
@@ -166,3 +140,111 @@ section {
   background: yellow;
 }
 
+/*////////// HEADER //////////*/
+
+header {
+  margin: 0 0 30px;
+}
+
+/*////////// NAVBAR //////////*/
+
+#navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  border-bottom: 1px solid #ccc;
+  text-align: center;
+}
+
+#navbar nav {
+  border-left: 1px solid #ccc;
+}
+
+#navbar nav a {
+  display: inline-block;
+  width: 16.6666667%;
+  margin: 0;
+  padding: 22px 0;
+  text-transform: uppercase;
+  color: black;
+  text-align: center;
+  border-right: 1px solid #ccc;
+  text-decoration: none;
+  font: 1em "Trebuchet MS", Arial, sans-serif;
+}
+
+#navbar nav a.selected {
+  background: #333;
+  color: white;
+}
+
+#navbar nav a:hover {
+  color: white;
+  background: rgb(0,0,0); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(0,0,0,1) 0%, rgba(71,71,71,1) 28%, rgba(81,81,81,1) 35%, rgba(71,71,71,1) 72%, rgba(43,43,43,1) 87%, rgba(28,28,28,1) 91%, rgba(0,0,0,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,1)), color-stop(28%,rgba(71,71,71,1)), color-stop(35%,rgba(81,81,81,1)), color-stop(72%,rgba(71,71,71,1)), color-stop(87%,rgba(43,43,43,1)), color-stop(91%,rgba(28,28,28,1)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* W3C */
+}
+
+/*////////// LOGO //////////*/
+
+#logo {
+  padding: 84px 0 0;
+}
+
+#logo h1 {
+  font-family: 'Clicker Script', cursive;
+  margin: 0;
+}
+
+#logo h2 {
+  font-family: 'Elsie Swash Caps', cursive;
+  margin: 0;
+}
+
+/*////////// MAIN SECTIONS //////////*/
+
+section {
+  padding: 30px;
+  margin-bottom: 20px;
+  background: white;
+}
+
+/*////////// DETAILS //////////*/
+
+#details {
+  border-top: 1px solid white;
+}
+
+#details div {
+  height: 221px;
+}
+
+#details a:link, #details a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red;
+}
+
+/*////////// FOOTER //////////*/
+
+footer {
+  text-align: center; 
+  font-size: 0.75em;
+  padding: 10px;
+  background: #eee;
+  border-top: 1px solid; 
+}
